--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Weather",
+  "name": "react_weather",
   "version": "1.0.0",
   "description": "Simple Weather app",
   "main": "index.js",
